# poly-scout

./: .env  .env.example  2026-01-19-poly-scout-session-memo.md  ANALYZER_README.md  CLAUDE.md  CLI_USAGE.md  README.md  README_SCANNER.md  analyze_bb4.py  analyze_divi.py  analyze_divi_deep.py  analyze_divi_final.py  analyze_divi_v2.py  analyze_gopfan2.py  analyze_gopfan2_v2.py  analyze_hans323.py  analyze_hans323_deep.py  check_weather.py  check_weather_liquidity.py  compare_nfc_afc.py  compare_odds.py  compare_today.py  config.yaml  debug_markets.py  deploy.sh  discover_sports.py  example_analyzer_usage.py  example_saturation_analysis.py  find_arbitrage_now.py  find_arbitrage_relaxed.py  find_game_slugs.py  find_games.py  find_today.py  hans323_full_analysis.py  hans323_market_breakdown.py  poly-scout.service  pyproject.toml  quick_analysis.py  resolve_weather_trade.py  scout_wallets.py  (+4 more)
data/: saturation_history.json  seen_markets.json  seen_wallets.json  weather_seller_portfolio.json
deploy/: sniper.service
docs/: 0XF2E346AB_WEATHER_STRATEGY.md  10HR_MEASUREMENT_PLAN.md  15M_CRYPTO_API.md  API.md  AUTOMATEDAITRADINGBOT_WEATHER_STRATEGY.md  EXAMPLES.md  GOPFAN2_WEATHER_STRATEGY.md  HANS323_WEATHER_STRATEGY.md  LIVE_GAME_SCALP.md  SCANNER_API.md  STRATEGY.md  TRACKED_WALLETS_STRATEGIES.md  VERIFIED_TRADER_ANALYSIS.md  WEATHER_BUCKET_ARBITRAGE.md  WEATHER_STRATEGIES.md  gopfan2_positions_raw.json  gopfan2_trades_raw.json
examples/: scan_example.py
output/: DIVILUNGAOBBW_STRATEGY_BLUEPRINT.md  divi_trades.json
src/: README_REVERSE.md  REVERSE_MODULE_SUMMARY.md  (+35 more)
(+1 files in other folders)
